--- a/Stage_A_Quiz1.ipynb
+++ b/Stage_A_Quiz1.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/emekeh/HDSC-Winter-23/blob/main/Stage_A_Quiz1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "da3f2d87",
       "metadata": {
         "id": "da3f2d87"
@@ -1857,7 +1867,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 1:** Which of these Areas had the highest sum in 2017?"
+        "### **Question 1:** Which of these Areas had the highest sum in 2017?"
       ],
       "metadata": {
         "id": "Gboe4_QjYhBc"
@@ -1896,7 +1906,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 2:** What is the **mean** and **standard deviation** across the whole dataset for the year 2017 to 2 decimal places?"
+        "### **Question 2:** What is the **mean** and **standard deviation** across the whole dataset for the year 2017 to 2 decimal places?"
       ],
       "metadata": {
         "id": "74H5m62UZh3_"
@@ -1938,7 +1948,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 3:** What is the total number of the sum of `\"Processing\"` in 2017?"
+        "### **Question 3:** What is the total number of the sum of `\"Processing\"` in 2017?"
       ],
       "metadata": {
         "id": "LkcG0KqhbNzd"
@@ -1974,7 +1984,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 6:** Which year had the least correlation with `\"Element Code\"`?"
+        "### **Question 6:** Which year had the least correlation with `\"Element Code\"`?"
       ],
       "metadata": {
         "id": "vTS9ZjqRd-pr"
@@ -2063,7 +2073,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 8:**  What year has the highest sum of `\"Stock Variation\"`?"
+        "### **Question 8:**  What year has the highest sum of `\"Stock Variation\"`?"
       ],
       "metadata": {
         "id": "90fFiUWSnK9g"
@@ -2118,7 +2128,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 10:** What is the total `\"Protein supply quantity\"` in `\"Madagascar\"` in 2015?"
+        "### **Question 10:** What is the total `\"Protein supply quantity\"` in `\"Madagascar\"` in 2015?"
       ],
       "metadata": {
         "id": "3phJy7ZbffQh"
@@ -2363,7 +2373,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 11:** Which of these Areas had the 7th lowest sum in 2017?"
+        "### **Question 11:** Which of these Areas had the 7th lowest sum in 2017?"
       ],
       "metadata": {
         "id": "YpI0foIEgIfk"
@@ -2402,7 +2412,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 12:** What is the total sum of `\"Wine\"` produced in 2015 and 2018 respectively?"
+        "### **Question 12:** What is the total sum of `\"Wine\"` produced in 2015 and 2018 respectively?"
       ],
       "metadata": {
         "id": "0g14Ct6IhuUX"
@@ -2655,7 +2665,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 15:** What is the total number and percentage of missing data in 2014 to 3 decimal places?"
+        "### **Question 15:** What is the total number and percentage of missing data in 2014 to 3 decimal places?"
       ],
       "metadata": {
         "id": "Lntvbxs-k4Ol"
@@ -2695,7 +2705,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Question 17:** What is the total number of unique countries in the dataset?"
+        "### **Question 17:** What is the total number of unique countries in the dataset?"
       ],
       "metadata": {
         "id": "c0ZbUZLxgpXr"
@@ -2749,7 +2759,8 @@
       "version": "3.9.7"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
